<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_box"
                android:title="@string/my_orders"/>
        <item
                android:id="@+id/nav_referral"
                android:icon="@drawable/ic_home"
                android:title="@string/referral"/>
        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/sign_out"/>
    </group>
</menu>
