<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".fragments.ReferralFragment">

    <TextView
            android:text="@string/invite"
            android:textSize="@dimen/big_title_text"
            android:textColor="@color/text_color_black"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/invite" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>


    <TextView
            android:text="@string/refer_msg"
            android:textSize="@dimen/sub_title_text"
            android:textColor="@color/text_color_black"
            android:fontFamily="@font/avenir_next_medium"
            android:gravity="center"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:id="@+id/invite_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/invite"/>


    <TextView
            android:id="@+id/referral_code"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/invite_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            android:background="@drawable/dashed_border"
            android:textColor="@color/button_secondary"
            android:textSize="@dimen/sub_title_text"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="KJDFKJDF"/>


    <TextView
            android:id="@+id/text_one"
            android:text="@string/is_your_referral_code"
            android:textSize="@dimen/sub_title_text"
            android:textColor="@color/text_color_black"
            android:fontFamily="@font/avenir_next_medium"
            android:gravity="center"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/referral_code" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>

    <Button
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/avenir_next_medium"
            android:text="@string/share"
            android:textColor="@color/buttons_secondary_text_color"
            android:textSize="@dimen/button_text"
            android:visibility="visible"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_one"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/people_referred_you"
            android:textSize="@dimen/sub_title_text"
            android:textColor="@color/text_color_black"
            android:fontFamily="@font/avenir_next_medium"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/share_btn"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp" android:id="@+id/textView"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/referred_list"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/referral_item"/>

</android.support.constraint.ConstraintLayout>