<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <View
            android:id="@+id/v1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/hint_color"
            android:layout_marginTop="2dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/mobile_image"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1.5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/v1"
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_medium"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="@dimen/product_title_text"
            android:visibility="visible" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/v1" android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_medium"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:visibility="visible" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/product_interest_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_medium"
            android:text="@string/intrest_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:visibility="visible" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/product_price"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_medium"
            android:text="@string/short_description"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:maxLines="2"
            android:visibility="visible" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/product_interest_text"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.3" android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>