<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/frameLayout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/back_pane"
            android:background="@drawable/custom_dialog_background_drawable_inset">

        <ImageView
                android:id="@+id/icon_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/messageTV"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/messageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_29"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_9"
                android:fontFamily="@font/avenir_next_medium"
                android:gravity="center"
                android:text="@string/email_sent"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/sp_19"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/guideline15"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="parent"/>


        <TextView
                android:id="@+id/ok_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/dp_32"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/avenir_next_medium"
                android:gravity="center"
                android:paddingStart="@dimen/dp_40"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_40"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toTopOf="@+id/guideline15"
                app:layout_constraintVertical_bias="1.0"/>

        <TextView
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/dp_32"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/avenir_next_medium"
                android:gravity="center"
                android:paddingStart="@dimen/dp_40"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_40"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline15"
                app:layout_constraintVertical_bias="1.0"/>

        <TextView
                android:id="@+id/only_ok_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="@dimen/dp_32"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/avenir_next_medium"
                android:gravity="center"
                android:paddingStart="@dimen/dp_40"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_40"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline15"
                app:layout_constraintVertical_bias="1.0"/>


        <android.support.constraint.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.052083332"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="74dp"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>